# goatcode

./: .gitignore  LICENSE  README.md  dune  dune-project
docs/: effects-evaluation.md  executor-campaign.md
docs/architecture/: 00-product.md  10-theory.md  20-contracts.md  20-medium.md  30-channels.md  30-scheduling.md  40-agents.md  40-scheduling.md  50-api.md  50-commit.md  60-agents.md  70-api.md  80-validation.md  90-puppeteer.md  90-supervisor.md  91-flat-org.md  README.md
examples/: calc_live.ml  coding_live.ml  dump_ledger.ml  dune  haiku_live.ml  lisp_live.ml  run.toml
lib/: agent.ml  agent.mli  channel.ml  channel.mli  chase.ml  chase.mli  contract.ml  contract.mli  dune  fiber.ml  fiber.mli  http.ml  http.mli  id.ml  id.mli  ledger.ml  ledger.mli  report.ml  report.mli  retire.ml  retire.mli  run.ml  run.mli  speculate.ml  speculate.mli  theory.ml  theory.mli  witness.ml  witness.mli
test/: dune  probe_control.ml  probe_f15_bare_switch.ml  probe_f15_forged_churn.ml  probe_f15_nonidem_in_grant.ml  probe_f15_nonidem_speculative.ml  probe_f15_rx_publish.ml  probe_f15_speculative_into_committed.ml  probe_f15_unadmitted_theory.ml  probe_f15_wrong_payload_publish.ml  probe_f15_wrong_relation_ref.ml  probe_fl1_generation_retreat.ml  test_admission.ml  test_boundary.ml  test_delivery.ml  test_disjoint.ml  test_drift.ml  test_engine.ml  test_fiber.ml  test_frontier.ml  test_goatcode.ml  test_heads.ml  test_landing.ml  test_mount.ml  test_probes.ml  test_recovery.ml  test_report.ml  test_squash.ml  test_witness.ml
