; The engine library takes no ppx: contracts are one-supply BY THE HOST —
; theory authors' payload types carry [@@deriving jsonschema, yojson] and the
; catalog entry (Contract.v) receives the deriver's output as data. The
; derivers therefore run where the type declarations live (host executables,
; test theories), never here (docs/architecture/10-theory.md).
(library
 (name goatcode)
 (public_name goatcode)
 ; unix: Ledger.Timestamp is stamped from the wall clock at append (the one
 ; clock any scheduler decision may consult); the stdlib has no wall clock.
 ; curl (ocurl): in-process libcurl for the direct provider lanes — no
 ; subprocess may sit between the harness and a model (http.mli).
 (libraries yojson unix curl))
